HTML and CSS done

--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
+    <script src="bomb.js"></script>
     <title>Sim City Bomb Squad</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <main class="gamespace">
+      <p id="timer" class="green">00:00:00</p>
+      <div id="wirebox">
+        <img src="img/uncut-blue-wire.png" alt="image of an uncut blue color">
+        <img src="img/uncut-green-wire.png" alt="image of an uncut green color">
+        <img src="img/uncut-red-wire.png" alt="image of an uncut red color">
+        <img src="img/uncut-white-wire.png" alt="image of an uncut white color">
+        <img src="img/uncut-yellow-wire.png" alt="image of an uncut yellow color">
+      </div>
+      <button id="reset" disabled>Reset</button>
+    </main>
   </body>
 </html>
