--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <main class="gamespace">
-      <p id="timer" class="green">00:00:00</p>
+      <p id="timer">00:00:00</p>
       <div id="wirebox">
-        <img src="img/uncut-blue-wire.png" alt="image of an uncut blue color">
-        <img src="img/uncut-green-wire.png" alt="image of an uncut green color">
-        <img src="img/uncut-red-wire.png" alt="image of an uncut red color">
-        <img src="img/uncut-white-wire.png" alt="image of an uncut white color">
-        <img src="img/uncut-yellow-wire.png" alt="image of an uncut yellow color">
+        <img id="blue" src="img/uncut-blue-wire.png" alt="image of an uncut blue color">
+        <img id="green" src="img/uncut-green-wire.png" alt="image of an uncut green color">
+        <img id="red" src="img/uncut-red-wire.png" alt="image of an uncut red color">
+        <img id="white" src="img/uncut-white-wire.png" alt="image of an uncut white color">
+        <img id="yellow" src="img/uncut-yellow-wire.png" alt="image of an uncut yellow color">
       </div>
-      <button id="reset" disabled>Reset</button>
+      <button id="reset" >Start Game</button>
     </main>
   </body>
 </html>
